2008-07-10  Laurent Debacker <debackerl@gmail.com> 

	* GroupVariant.cs: Implementation of the concept of "variant" for Group.
	* VariantsCombinaison.cs: Implementation for the concept of variant
	  combinaisons.
	* Ribbon.cs: Migrating Ribbon to variants combinaisons.

2008-07-03  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Enhanced key tip theme
	* SyntheticWindow.cs: Debug code
	* RibbonGroup.cs: Avoid memory leak

2008-07-01  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenuItem.cs: Open/close menu on mouse hover, with timer
	* ApplicationMenu.cs: Reset default menu on button click

2008-06-30  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: hide container when windows is hidden
	* ApplicationButton.cs: keep the app menu pressed while the app menu is
	  opened

2008-06-29  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenuItem.cs: Text align fix, and delayed menu opening.
	* ApplicationMenu.cs: One hard-coded value removed

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: More compliant app menu background, and new feature for buttons:
	  opaque background.
	* ApplicationMenu.cs: Opaque buttons, window offset.
	* ApplicationButton.cs: API update
	* BaseButton.cs: New feature: opaque background

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Nicer menu items background
	* ApplicationMenuItem.cs: Attempt to fix justification of menu item labels,
	  not ok yet
	* ApplicationMenu.cs: Fixed menu size

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: Working menu opening

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: First steps for the app menu theme
	* ApplicationMenuItem.cs: Better handling of fast moving pointers
	* ApplicationMenu.cs: Bugfixes

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Better behavior of hilighs for app menu item
	* ApplicationMenuItem.cs: More work on proper app menu item behavior
	  (hilights)
