@@ -16,6 +16,16 @@ namespace Ribbons
 		
 		public VariantsCombinaison ()
 		{
+			Init ();
+		}
+		
+		protected VariantsCombinaison (IntPtr raw) : base (raw)
+		{
+			Init ();
+		}
+		
+		private void Init ()
+		{
 			this.widgets = new List<Widget> ();
 			
 			this.SetFlag (WidgetFlags.NoWindow);
@@ -65,7 +75,7 @@ namespace Ribbons
 		/// <param name="WidgetIndex">The index (starting at 0) at which the widget must be inserted, or -1 to insert the widget after all existing widgets.</param>
 		public void Insert (Widget w, int WidgetIndex)
 		{
-			w.Parent = this;
+			if(Parent != null) w.Parent = this;
 			w.Visible = true;
 			
 			if(WidgetIndex == -1)
@@ -80,7 +90,7 @@ namespace Ribbons
 		/// <param name="WidgetIndex">Index of the widget to remove.</param>
 		public void Remove (int WidgetIndex)
 		{
-			widgets[WidgetIndex].Parent = null;
+			if(Parent != null) widgets[WidgetIndex].Parent = null;
 			
 			if(WidgetIndex == -1)
 				widgets.RemoveAt (widgets.Count - 1);
@@ -90,8 +100,24 @@ namespace Ribbons
 			ShowAll ();
 		}
 		
+		protected override void OnParentSet (Widget previous_parent)
+		{
+			base.OnParentSet (previous_parent);
+			
+			if(Parent == null)
+			{Console.WriteLine ("unparnet");
+				foreach(Widget w in widgets) w.Unparent ();
+			}
+			else
+			{Console.WriteLine ("ok");
+				foreach(Widget w in widgets) w.Parent = this;
+			}
+		}
+		
 		protected override void ForAll (bool include_internals, Callback callback)
 		{
+			//if(Parent == null) return;
+			
 			foreach(Widget w in widgets)
 			{
 				if(w.Visible) callback (w);
@@ -127,10 +153,11 @@ namespace Ribbons
 				{
 					w.HeightRequest = rowHeight;
 					requisitions[i] = w.SizeRequest ();
-					totalWidth += requisitions[i].Width;
+					totalWidth += requisitions[i].Width + spacing;
 				}
 				++i;
 			}
+			totalWidth -= spacing;
 			
 			requisition.Height = rowHeight;
 			if(WidthRequest != -1)
@@ -157,7 +184,8 @@ namespace Ribbons
 					r.X = x;
 					r.Y = y;
 					r.Width = Math.Min (right, r.X + requisitions[i].Width) - r.X;
-					r.Height = Math.Min (bottom, r.Y + requisitions[i].Height) - r.Y;
+					//r.Height = Math.Min (bottom, r.Y + requisitions[i].Height) - r.Y;
+					r.Height = bottom - y;
 					w.SizeAllocate (r);
 					
 					x += r.Width + spacing;
